# cmake_exmample

./: .travis.yml  CMakeLists.txt  LICENSE  readme.md
_Tests/FooTest/: CMakeLists.txt  SayHelloTest.cpp  testMain.cpp
apps/: app.cpp
docs/: mainpage.md
include/modern/: lib.hpp
sayHello/: CMakeLists.txt  sayHello.cpp  sayHello.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
